<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <TextView
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:text="@string/text_wra"
        android:textColor="@color/blue_l"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:text="@string/text_hmeromhnia"
        android:textColor="@color/blue_l"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="348dp"
        android:layout_height="80dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:text="@string/text_aithma"
        android:textAllCaps="false"
        android:textColor="@color/blue_l"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/fusiotherapeuthrio"
        android:layout_width="244dp"
        android:layout_height="54dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:text="@string/text_fusuiouerapeuthrio"
        android:textColor="@color/blue_l"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/yphresia"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:text="@string/text_yphresia"
        android:textColor="@color/blue_l"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <Spinner
        android:id="@+id/fusiotherapeuthrio_spinner"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:contentDescription="@string/text_epilogh"
        android:textColor="@color/shadow_wording"
        app:layout_constraintBottom_toTopOf="@+id/yphresia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fusiotherapeuthrio"
        app:layout_constraintVertical_bias="0.476" />

    <Spinner
        android:id="@+id/yphresia_spinner"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:contentDescription="@string/text_epilogh2"
        android:textColor="@color/shadow_wording"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yphresia"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/datepickerbutton"
        style="?android:spinnerStyle"
        android:layout_width="201dp"
        android:layout_height="65dp"
        android:onClick="openDatePicker"
        android:text="@string/hmnia"
        android:textColor="@color/shadow_wording"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toBottomOf="@+id/yphresia_spinner"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/timepickerButton"
        style="?android:spinnerStyle"
        android:layout_width="138dp"
        android:layout_height="47dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="73dp"
        android:onClick="popTimePicker"
        android:text="@string/epilogh_wras"
        android:textColor="@color/shadow_wording"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6"
        app:layout_constraintTop_toBottomOf="@+id/datepickerbutton"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>